--- a/tsconfig.pika.json
+++ b/tsconfig.pika.json
@@ -2,8 +2,9 @@
   "compilerOptions": {
     "target": "es2019",
     "module": "esnext",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "esModuleInterop": true
   },
-  "include": ["src/index.ts"],
+  "include": ["src/index.ts", "src/node.ts"],
   "exclude": ["node_modules", "**/__tests__/*"]
 }
