--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,7 @@
 version: 2.1
 
-commands:
-  notify_slack_failure:
-    steps:
-      - run:
-          name: Notify Slack of failure if on master
-          command: |
-            if [ "$CIRCLE_BRANCH" = "master" ]; then
-              curl -X POST -H 'Content-type: application/json' --data "{\"text\":\":boom: ${CIRCLE_JOB} failed: ${CIRCLE_BUILD_URL}\"}" https://hooks.slack.com/services/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
-            fi
-          when: on_fail
+orbs:
+  slack: circleci/slack@3.4.1
 
 docker: &DOCKER_NODE
   docker:
@@ -33,7 +25,7 @@ jobs:
           root: ~/
           paths:
             - project
-      - notify_slack_failure
+      - slack/notify-on-failure
 
   lint:
     <<: *DOCKER_NODE
@@ -42,7 +34,7 @@ jobs:
       - attach_workspace:
           at: ~/
       - run: npm run lint
-      - notify_slack_failure
+      - slack/notify-on-failure
 
   typecheck:
     <<: *DOCKER_NODE
@@ -53,7 +45,7 @@ jobs:
       - run:
           command: npm run typecheck
           no_output_timeout: 1m
-      - notify_slack_failure
+      - slack/notify-on-failure
 
   build:
     <<: *DOCKER_NODE
@@ -65,7 +57,7 @@ jobs:
           root: ~/
           paths:
             - project
-      - notify_slack_failure
+      - slack/notify-on-failure
 
   release:
     <<: *DOCKER_NODE
@@ -73,7 +65,7 @@ jobs:
       - attach_workspace:
           at: ~/
       - run: npx semantic-release
-      - notify_slack_failure
+      - slack/notify-on-failure
 
 workflows:
   version: 2
