--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "version": "npm run build",
     "build": "pika build",
-    "lint": "tslint --project tsconfig.lint.json",
-    "format": "tslint --project tsconfig.lint.json --fix",
+    "lint": "eslint --ext ts,js,tsx,jsx,json .",
+    "format": "npm run lint -- --fix",
     "typecheck": "tsc --noEmit",
     "test": "jest",
     "test:debug": "node --inspect-brk --inspect=127.0.0.1:9229 ./node_modules/jest/bin/jest.js --runInBand"
@@ -29,17 +29,15 @@
     "rollup-plugin-babel": "^4.4.0"
   },
   "devDependencies": {
-    "@carforyou/tslint-rules": "^3.0.0",
+    "@carforyou/eslint-config": "^1.1.0",
     "@pika/pack": "^0.5.0",
     "@pika/plugin-build-node": "^0.9.0",
     "@pika/plugin-build-web": "^0.9.0",
     "@pika/plugin-ts-standard-pkg": "^0.9.0",
     "@types/jest": "^25.2.3",
     "jest": "^26.0.0",
-    "prettier": "^2.0.5",
     "semantic-release": "^15.14.0",
     "ts-jest": "^26.0.0",
-    "tslint": "^5.20.1",
     "typescript": "^3.9.3"
   },
   "@pika/pack": {
