--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/plugin-syntax-import-meta": "^7.7.4",
     "@babel/preset-env": "^7.9.6",
     "@pika/types": "^0.9.0",
+    "@types/node": "^14.14.31",
     "babel-plugin-dynamic-import-node-babel-7": "^2.0.7",
     "builtin-modules": "^3.1.0",
     "es-abstract": "^1.18.0-next.1",
