--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "homepage": "https://github.com/carforyou/pika-plugin-build-standalone-node-pkg#readme",
   "dependencies": {
+    "@babel/core": "7.15.8",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/plugin-syntax-import-meta": "7.10.4",
     "@babel/preset-env": "7.15.8",
